--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
+
 orbs:
    image-scanner: microsec/image-scanner@0.1.1
 
@@ -11,4 +12,4 @@ workflows:
    jobs:
      - image-scanner/scan-image:
          image_name: nginx
-         auth_token: MICROSEC_AUTH_TOKEN
+         auth_token: etacies_testing
